first mvp of temperature sensor reading

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,16 +9,17 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:airm2m_core_esp32c3]
-platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip  ; Using latest platform libs (as suggested in tutorial https://randomnerdtutorials.com/vs-code-pioarduino-ide-esp32/ )
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/stable/platform-espressif32.zip
 board = airm2m_core_esp32c3
 framework = arduino
 board_build.f_cpu = 160000000L
-
-build_flags = 
-   -DARDUINO_USB_CDC_ON_BOOT=1
-
-lib_deps =
-  olikraus/U8g2 @ ^2.36.9
-
 upload_speed = 921600
 monitor_speed = 115200
+
+build_flags = 
+	-DARDUINO_USB_CDC_ON_BOOT=1
+lib_deps = 
+	olikraus/U8g2 @ ^2.36.9
+	paulstoffregen/OneWire@^2.3.8
+	milesburton/DallasTemperature@^4.0.5
+
